package com.shiftmanager.demo.Entities.DTOs;

import lombok.AllArgsConstructor;


@AllArgsConstructor
public class EmployeeDTO {
    String name;
    String email;
    int managerId;
}
