package com.shiftmanager.demo.Entities;

public enum ShiftChangeStatus {
    PENDING,
    APPROVED,
    REJECTED
}
