package com.shiftmanager.demo.Entities;

public enum ShiftStatus {
    COMPLETED,
    PENDING
}
